<resources>
    <string name="app_name">ByteTracker</string>
    <string name="title_activity_register_act">register_act</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height (in CMs)</string>
    <string name="height_slider">Height Slider</string>
    <string name="weight_in_kgs">Weight (in KGs)</string>
    <string name="body_mass_index_or_bmi_helps_you_to_determine_whether_you_are_in_a_healthy_weight_range_for_your_height">Body Mass Index or BMI helps you to determine whether you are in a healthy weight range for your height.</string>
    <string name="this_calculator_should_not_be_used_for_pregnant_women_or_children">* This calculator should not be used for pregnant women or children.</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="_21_5">21.5</string>
    <string name="you_have_a_normal_body_weight_enjoy">You have a normal Body Weight.Keep up the good work and continue leading a balanced lifestyle !</string>
    <string name="under">You are Underweight. Try Bulking up in a healthy way.Speak to a healthcare professional for guidance.</string>
    <string name="over">You are Overweight.Consider making lifestyle changes such as incorporating physical activity and adopting a nutritious eating plan." .</string>
    <string name="obese">You are Obese.It's crucial to prioritize your health and speak to a healthcare provider for guidance on weight management.</string>
    <string name="_60">60</string>
    <string name="calories_taken">Calories Taken = 0 KCAL</string>
    <string name="calories">Calories</string>
    <string name="kcal">KCAL</string>
    <string name="reset">RESET</string>
</resources>
