<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EF3B36"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/gender"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="@string/male"
        android:textAlignment="center"
        android:textColor="#EF3B36"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/female"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <Button
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="@string/female"
        android:textAlignment="center"
        android:textColor="#EF3B36"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintLeft_toRightOf="@id/male"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/height"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/male" />


    <EditText
        android:id="@+id/slider1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/_60"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintBottom_toTopOf="@id/weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/weight_in_kgs"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider1" />
    <EditText
        android:id="@+id/slider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="180"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:elevation="30dp"
        android:focusable="true"
        android:scaleType="center"
        app:fabCustomSize="80dp"
        app:hoveredFocusedTranslationZ="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider2"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_baseline_arrow_right_alt_24"
        app:tint="#EF3B36"
        app:useCompatPadding="true"
        android:contentDescription="TODO" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/floatingActionButton">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bmitext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:text="@string/body_mass_index_or_bmi_helps_you_to_determine_whether_you_are_in_a_healthy_weight_range_for_your_height"
                android:textAlignment="center"
                android:textColor="#474747"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/disclamer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bmitext"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:text="@string/this_calculator_should_not_be_used_for_pregnant_women_or_children"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/yourBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:text="@string/your_bmi"
                android:textAlignment="center"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/yourBmi"
                android:layout_marginStart="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:padding="5dp"
                android:text="@string/_21_5"
                android:textAlignment="center"
                android:textColor="#EF3B36"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Result"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                android:text="@string/you_have_a_normal_body_weight_enjoy"
                android:textAlignment="center"
                android:textColor="#5DFF24"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>