<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03203C"
    tools:context=".FoodSelectActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4BE2C"
        app:layout_constraintTop_toBottomOf="@id/listView"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F4BE2C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartRecyclerView">

        <TextView
            android:id="@+id/calorieText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:fontFamily="@font/thin"
            android:padding="3dp"
            android:text="@string/calories"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/valueCal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/regular"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/kcal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/thin"
            android:text="@string/kcal"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:background="#B4161B"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/regular" />

    </LinearLayout>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="Search food items..."
        android:padding="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/listView"
        app:layout_constraintBottom_toTopOf="@id/cartRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
